# adk-rust

./: CHANGELOG.md  README.md
adk-cli/: Cargo.toml  README.md
adk-cli/src/: main.rs  setup.rs
adk-core/src/: model.rs
adk-model/: README.md
adk-model/src/: codex.rs  lib.rs  openai_compatible.rs  provider.rs
adk-model/src/openai/: config.rs  responses_client.rs
adk-model/tests/: codex_responses_integration_tests.rs  openai_client_preservation_tests.rs  openai_preservation_tests.rs
adk-rust/: README.md
adk-rust/src/: lib.rs
docs/official_docs/models/: openai-responses.md  providers.md
